ecmascript/parser/tests/typescript-errors/tsc/parser/ecmascript5/RegularExpressions/parserRegularExpression1/input.ts.stderr
error[1108]: A 'return' statement can only be used within a function body.
 --> $DIR/tests/typescript-errors/tsc/parser/ecmascript5/RegularExpressions/parserRegularExpression1/input.ts:1:1
  |
1 | return /(#?-?\d*\.\d\w*%?)|(@?#?[\w-?]+%?)/g;
  | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

